fix: fixed invisible text on auth

--- a/src/styles.css
+++ b/src/styles.css
@@ -295,6 +295,7 @@ select,
 textarea {
   width: 100%;
   padding: .6rem;
+  color:#000;
   border-radius: 8px;
   border: 1px solid #e5e7eb;
   font-size: 1rem;
